--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DB_USER=root
 DB_PASSWORD=7ANp3xm33bxVQ
 DB_NAME=binshi_pickup_service
 DB_PORT=12001
+WECHAT_SERVER_APPID=wx85570a9bf2385a6b
+WECHAT_SERVER_APPSECRET=59813345d12497c2b0bfec07521bf684
