--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ DB_NAME=binshi_pickup_service
 DB_PORT=12001
 WECHAT_SERVER_APPID=wx85570a9bf2385a6b
 WECHAT_SERVER_APPSECRET=59813345d12497c2b0bfec07521bf684
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_ZnJ3rUymb47S1Xsv_cx2sNiHyFpFh4rWvshzCGpR8MltdcX"
+
+BASE_URL=https://bingshi.xn--vuqw0e54ixuh2wab7xjjnvyb7x0m.online
+WECHAT_MCH_ID=1702704281
+
