--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/pro-components": "^2.6.52",
     "@types/antd": "^1.0.4",
     "@types/minio": "^7.1.1",
+    "@vercel/blob": "^0.27.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "form-data": "^4.0.1",
