--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@vercel/blob": "^0.27.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "draft-js-export-html": "^1.4.1",
     "form-data": "^4.0.1",
     "formidable": "^3.5.1",
     "html2canvas": "^1.4.1",
+    "immutable": "^3.8.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "knex": "^3.1.0",
@@ -27,6 +29,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-quill": "^2.0.0",
     "recharts": "^2.13.0",
     "umi-request": "^1.4.0",
@@ -41,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "postcss": "^8",
