--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "recharts": "^2.13.0",
     "umi-request": "^1.4.0",
     "uuid": "^10.0.0",
-    "wechatpay-node-v3": "^2.2.1"
+    "wechatpay-node-v3": "^2.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
